create favorite list at bottom of index.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
             <input id="music" class="form-control" type="text">
           </div>
 
-          <button type="submit" class="btn">Show me my favorites! I've already forgotten what I've typed in!</button>
+          <button type="submit" class="btn">Show me my favorites!</button>
         </form>
       </div>
+
+      <div id="story">
+        <h1>In case you forgot, here are your favorite things!</h1>
+        <p>Favorite color: <span class="color"></span></p>
+        <p>Favorite food: <span class="food"></span></p>
+        <p>Favorite hobby: <span class="hobby"></span></p>
+        <p>Favorite movie: <span class="movie"></span></p>
+        <p>Favorite TV Show: <span class="television"></span></p>
+        <p>Favorite musical group: <span class="music"></span>
+    
+      </div>
+
+    </div>
+  </body>
+</html>
