--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <h1>Fill out the form! What are your favorite things?</h1>
+        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/du6wiLRgm8o" frameborder="0" allowfullscreen></iframe></center>
       <div id= "blanks">
         <form>
           <div class="form group">
@@ -49,9 +50,10 @@
         <p>Favorite movie: <span class="movie"></span></p>
         <p>Favorite TV Show: <span class="television"></span></p>
         <p>Favorite musical group: <span class="music"></span>
-    
+
       </div>
 
     </div>
+
   </body>
 </html>
